--- a/src/app/book/components/books-list/books-list.component.html
+++ b/src/app/book/components/books-list/books-list.component.html
@@ -2,8 +2,9 @@
 
   <app-book
     *ngFor="let book of books$|async"
-
-
+    class="book"
+    [book]="book"
+    [bookColorArray]="bookColorArray"
   ></app-book>
 
 </div>
